--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <div class="menubar">
                 <ul>
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">Clubs</a></li>
-                    <li><a href="#">Word Cup 2022</a></li>
+                    <li><a href="#">Players</a></li>
+                    <li><a href="#">Highlights</a></li>
                     <li><a href="#">Upcoming Matches</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
@@ -30,6 +30,8 @@
         </nav>
     </header>
     <main>
+
+        <!-- top-section start
         <section class="top-section">
             <div class="top-area">
                 <div class="area">
@@ -41,6 +43,19 @@
                 </div>
             </div>
           
+        </section> -->
+        <section class="header-section">
+            <div class="header-details">
+                <div class="header-left">
+                    <h1>Conmebol <br><span class="span-unit" >Copa America </span><br> 2021</h1>
+                    <a class="btn" href="#">Watch Live<i class="fas fa-arrow-right"></i></a>
+                </div>
+                <div class="header-right">
+                    <img src="images/banner.png" alt="">
+                </div>
+
+            </div>
+
         </section>
 
         <section class="player-card">
@@ -48,83 +63,99 @@
             <div class="player">
                 <img src="images/players/player-1.png" alt="">
                 <h2>Neymar Jr</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid quam eaque nesciunt dolorem! Delectus error accusantium sequi ea tempora molestias?</p>
+                <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team. He is widely regarded as one of the best players in the world.</p>
 
             </div>
             <div class="player">
                 <img src="images/players/player-2.png" alt="">
-                <h2>Neymar Jr</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid quam eaque nesciunt dolorem! Delectus error accusantium sequi ea tempora molestias?</p>
+                <h2>Lionel Messi</h2>
+                <p>Lionel Andrés Messi is an Argentine professional footballer who plays as a forward and captains the Argentina national team. He has played all his professional career for La Liga club Barcelona, whom he captained from 2018 to 2021</p>
 
             </div>
             <div class="player">
                 <img src="images/players/player-3.png" alt="">
-                <h2>Neymar Jr</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid quam eaque nesciunt dolorem! Delectus error accusantium sequi ea tempora molestias?</p>
+                <h2>Cristiano Ronaldo</h2>
+                <p>Cristiano Ronaldo dos Santos Aveiro GOIH ComM is a Portuguese professional footballer who plays as a forward for Serie A club Juventus and captains the Portugal national team. </p>
 
             </div>
             <div class="player">
                 <img src="images/players/player-4.png" alt="">
-                <h2>Neymar Jr</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid quam eaque nesciunt dolorem! Delectus error accusantium sequi ea tempora molestias?</p>
+                <h2>Paulo Dybala</h2>
+                <p>Paulo Exequiel Dybala is an Argentine professional footballer who plays as a forward for Serie A club Juventus and the Argentina national team.</p>
 
             </div>
             <div class="player">
                 <img src="images/players/player-5.png" alt="">
-                <h2>Neymar Jr</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid quam eaque nesciunt dolorem! Delectus error accusantium sequi ea tempora molestias?</p>
+                <h2>Mesut Özil</h2>
+                <p>Mesut Özil is a German professional footballer who plays as an attacking midfielder for Süper Lig club Fenerbahçe. Nicknamed "The Assist King", Özil is known for his technical skills, creativity, agility, and finesse.</p>
 
             </div>
             <div class="player">
                 <img src="images/players/player-6.png" alt="">
-                <h2>Neymar Jr</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid quam eaque nesciunt dolorem! Delectus error accusantium sequi ea tempora molestias?</p>
+                <h2>Mauro Icardi</h2>
+                <p>Mauro Emanuel Icardi is an Argentine professional footballer who plays as a striker for Ligue 1 club Paris Saint-Germain and the Argentina national team.</p>
 
             </div>
             <div class="player">
                 <img src="images/players/player-7.png" alt="">
-                <h2>Neymar Jr</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid quam eaque nesciunt dolorem! Delectus error accusantium sequi ea tempora molestias?</p>
+                <h2>Ángel Di María</h2>
+                <p>Ángel Fabián Di María is an Argentine professional footballer who plays for Ligue 1 club Paris Saint-Germain and the Argentina national team. He can play as either a winger or attacking midfielder.</p>
 
             </div>
             <div class="player">
                 <img src="images/players/player-8.png" alt="">
-                <h2>Neymar Jr</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid quam eaque nesciunt dolorem! Delectus error accusantium sequi ea tempora molestias?</p>
+                <h2>Kylian Mbappé</h2>
+                <p>Kylian Mbappé Lottin is a French professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the France national team. Mbappé began his senior career with Ligue 1 club Monaco, making his professional debut in 2015, aged 16.</p>
 
             </div>
             <div class="player">
                 <img src="images/players/player-9.png" alt="">
-                <h2>Neymar Jr</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid quam eaque nesciunt dolorem! Delectus error accusantium sequi ea tempora molestias?</p>
+                <h2>Mohamed Salah</h2>
+                <p>Mohamed Salah Hamed Mahrous Ghaly is an Egyptian professional footballer who plays as a forward for Premier League club Liverpool and captains the Egypt national team. Considered one of the best players in the world. </p>
 
             </div>
 
         </div>
     </section>
+    <!-- top section end -->
 
-    <section class="watch-match">
-        <div class="watch-now">
-            <div class="watch-now-info">
-                <div class="watch-info">
-                    <h2>All Highlights
-                        Copa America 2021</h2>
-                    <p> Copa America 2021 will start on June 13. Get the full schedule, fixtures and match times and
-                        know where to watch live streaming and telecast in India.</p>
-                </div>
-                <div class="watch-now-button">
-                    <a href="https://www.goal.com/en-in/live-scores" class="watch-now-link">Watch Now <i
-                            class="fas fa-long-arrow-alt-right watch-icon"></i>
-                    </a>
-                </div>
 
-            </div>
-            <div class="watch-image">
-                <img src="./images/match.png" alt="" class="match">
-            </div>
+    <!-- watch-section start -->
+
+    <section class="watch-section">
+        <div class="watch-content">
+            <h2 class="watch-title">All Highlights <br> Copa America 2021</h2>
+            <p>Copa America 2021 will start on June 13. Get the full schedule, fixtures and match times and know where to watch live streaming and telecast in India.</p>
+
+            <a class="btn" href="#">Watch Now<i class="fas fa-arrow-right"></i></a>
 
         </div>
+        <div class="watch-content">
+            <img src="images/match.png" alt="">
+        </div>
+
     </section>
+    <!-- watch-section end -->
+    <section class="schedule-section">
+        <div class="schedule-info">
+            <div class="schedule-title">
+                <h2>Copa America schedule 2021</h2>
+                <h3>11 July 2021</h3>
+            </div>
+            <div class="country">
+                <div class="argentina country-card">
+                    <h2>Argentina</h2>
+                    <img src="images/argentina.png" alt="">
+                </div>
+                <div class="brazil country-card">
+                    <h2>Brazil</h2>
+                    <img src="images/Brazil.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- footer-section start -->
     <section class="footer-section">
         <div class="footer-area">
             <div class="footer-img">
@@ -143,7 +174,7 @@
             </div>
             
     </section>
-
+    <!-- footer section end -->
     </main>
 </body>
 </html>
