resposive media query

--- a/index.html
+++ b/index.html
@@ -120,35 +120,46 @@
     <!-- top section end -->
 
 
-    <!-- watch-section start -->
+    <!-- live-section start -->
+    <section class="live-match">
+        <div class="live-now">
+            <div class="live-now-info">
+                <div class="live-info">
+                    <h2>All Highlights
+                        Copa America 2021</h2>
+                    <p> Copa America 2021 will start on June 13. Get the full schedule, fixtures and match times and
+                        know where to watch live streaming and telecast in India.</p>
+                </div>
+                <div class="live-now-button">
+                    <a href="https://www.goal.com/en-in/live-scores" class="btn">Watch Now <i
+                            class="fas fa-long-arrow-alt-right watch-icon"></i>
+                    </a>
+                </div>
 
-    <section class="watch-section">
-        <div class="watch-content">
-            <h2 class="watch-title">All Highlights <br> Copa America 2021</h2>
-            <p>Copa America 2021 will start on June 13. Get the full schedule, fixtures and match times and know where to watch live streaming and telecast in India.</p>
-
-            <a class="btn" href="#">Watch Now<i class="fas fa-arrow-right"></i></a>
+            </div>
+            <div class="live-image">
+                <img src="images/match.png" alt="" class="match">
+            </div>
 
         </div>
-        <div class="watch-content">
-            <img src="images/match.png" alt="">
-        </div>
-
     </section>
-    <!-- watch-section end -->
+    
+    <!-- live-section end -->
+    
+    <!-- schedule section start -->
     <section class="schedule-section">
         <div class="schedule-info">
             <div class="schedule-title">
-                <h2>Copa America schedule 2021</h2>
+                <h2>Copa America- 2021 Live Update</h2>
                 <h3>11 July 2021</h3>
             </div>
             <div class="country">
                 <div class="argentina country-card">
-                    <h2>Argentina</h2>
+                    <h2>Argentina-1</h2>
                     <img src="images/argentina.png" alt="">
                 </div>
                 <div class="brazil country-card">
-                    <h2>Brazil</h2>
+                    <h2>Brazil-0</h2>
                     <img src="images/Brazil.png" alt="">
                 </div>
             </div>
